Fixed events page

--- a/src/events/index.html
+++ b/src/events/index.html
@@ -12,13 +12,31 @@
     />
   </head>
   <body>
-    <img src="./images\bgd.webp" id="bg" alt="" />
+    <a
+      href="/"
+      style="
+        position: absolute;
+        top: 1rem;
+        right: 2rem;
+        padding: 0.6rem 1rem;
+        background-color: #0b74bf;
+        color: #f2f2f2;
+        border-radius: 999px;
+        text-decoration: none;
+        z-index: 999999;
+        font-size: 0.75rem;
+        font-weight: bold;
+        font-family: Montserrat;
+      "
+      >Go to home</a
+    >
+    <img id="bg" alt="" aria-hidden="true" />
     <div class="headtext">Events.</div>
     <div class="card-collection">
       <div class="card">
         <img
           id="card-image"
-          src="./images\pexels-thibault-trillet-167636.webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/1_0icV6lnFw.webp?ik-sdk-version=javascript-1.4.3"
           alt="battle of bands"
           loading="lazy"
           style="width: 100%"
@@ -37,7 +55,7 @@
       <div class="card">
         <img
           id="card-image"
-          src="images\michael-lee-5Z9bgfRZLLE-unsplash.webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/2_-dyNAJNkU.webp?ik-sdk-version=javascript-1.4.3"
           alt="fashion show"
           loading="lazy"
           style="width: 100%"
@@ -56,7 +74,7 @@
       <div class="card">
         <img
           id="card-image"
-          src="images\rainier-ridao-GRDpPpKczdY-unsplash.webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/3_D0JJG3S99.webp?ik-sdk-version=javascript-1.4.3"
           alt="group dance competition"
           loading="lazy"
           style="width: 100%"
@@ -77,7 +95,7 @@
         <img
           class="special-image"
           id="card-image"
-          src="images\allie-reefer-rAoQn6kwv64-unsplash.webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/4_T3fcRsL2U.webp?ik-sdk-version=javascript-1.4.3"
           alt="3 minutes to fame"
           loading="lazy"
           style="width: 100%; height: 70%"
@@ -95,7 +113,7 @@
       <div class="card">
         <img
           id="card-image"
-          src="images\lilly-rum-L6W9ZIQ5saM-unsplash.webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/5_2nFf66tfP.webp?ik-sdk-version=javascript-1.4.3"
           alt="Photography"
           loading="lazy"
           style="width: 100%"
@@ -112,7 +130,7 @@
       <div class="card">
         <img
           id="card-image"
-          src="images\eaters-collective-i_xVfNtQjwI-unsplash.webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/6_l0oP0yx1V.webp?ik-sdk-version=javascript-1.4.3"
           alt="Reel making"
           loading="lazy"
           style="width: 100%"
@@ -130,7 +148,7 @@
       <div class="card">
         <img
           id="card-image"
-          src="images\rob-schreckhise-8zdEgWg5JAA-unsplash (1).webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/7_1Yup0elmAI.webp?ik-sdk-version=javascript-1.4.3"
           alt="Reddit Rumble"
           loading="lazy"
           style="width: 100%"
@@ -148,7 +166,7 @@
       <div class="card">
         <img
           id="card-image"
-          src="images\BRANDMA-BIG-BABOL.webp"
+          src="https://ik.imagekit.io/rain/regalia22/events/8__A94gnjad.webp?ik-sdk-version=javascript-1.4.3"
           alt="Ad Spoof"
           loading="lazy"
           style="width: 100%; height: 67%"
