--- a/src/index.html
+++ b/src/index.html
@@ -153,112 +153,6 @@
     />
     <div class="absolute inset-0 z-[1] h-screen bg-background opacity-40"></div>
 
-    <!-- <nav -->
-    <!--   data-navbar -->
-    <!--   class="fixed top-0 z-40 w-full transition-colors duration-200 ease-linear will-change-contents" -->
-    <!-- > -->
-    <!--   <div -->
-    <!--     class="container mx-auto flex flex-wrap items-center justify-between py-4 px-6 md:px-10" -->
-    <!--   > -->
-    <!--     <a href="https://www.rcciit.org/" class="flex items-center"> -->
-    <!--       <img -->
-    <!--         src="images/logo_rcciit.png" -->
-    <!--         class="mr-3 h-9 w-5" -->
-    <!--         alt="RCCIIT Logo" -->
-    <!--       /> -->
-    <!--       <p class="self-center whitespace-nowrap text-mini font-bold"> -->
-    <!--         RCC Institute of Information Technology -->
-    <!--         <span class="mt-1 block text-micro font-medium sm:text-mini"> -->
-    <!--           Canal South Road. Beliaghata. Kolkata - 700 015 -->
-    <!--         </span> -->
-    <!--       </p> -->
-    <!--     </a> -->
-    <!--     <button -->
-    <!--       data-collapse-toggle="mobile-menu" -->
-    <!--       type="button" -->
-    <!--       class="ml-3 inline-flex items-center rounded-lg p-2 text-sm text-text hover:bg-accent focus:outline-none focus:ring-2 focus:ring-gray-200 md:hidden" -->
-    <!--       aria-controls="mobile-menu" -->
-    <!--       aria-expanded="false" -->
-    <!--     > -->
-    <!--       <span class="sr-only">Open menu</span> -->
-    <!--       <svg -->
-    <!--         class="h-6 w-6" -->
-    <!--         fill="currentColor" -->
-    <!--         viewBox="0 0 20 20" -->
-    <!--         xmlns="http://www.w3.org/2000/svg" -->
-    <!--       > -->
-    <!--         <path -->
-    <!--           fill-rule="evenodd" -->
-    <!--           d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" -->
-    <!--           clip-rule="evenodd" -->
-    <!--         ></path> -->
-    <!--       </svg> -->
-    <!--       <svg -->
-    <!--         class="hidden h-6 w-6" -->
-    <!--         fill="currentColor" -->
-    <!--         viewBox="0 0 20 20" -->
-    <!--         xmlns="http://www.w3.org/2000/svg" -->
-    <!--       > -->
-    <!--         <path -->
-    <!--           fill-rule="evenodd" -->
-    <!--           d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" -->
-    <!--           clip-rule="evenodd" -->
-    <!--         ></path> -->
-    <!--       </svg> -->
-    <!--     </button> -->
-    <!--     <div class="hidden w-full md:block md:w-auto" id="mobile-menu"> -->
-    <!--       <ul -->
-    <!--         class="mt-4 flex flex-col overflow-hidden rounded-lg bg-background md:mt-0 md:flex-row md:space-x-8 md:bg-transparent md:text-sm md:font-bold" -->
-    <!--       > -->
-    <!--         <li> -->
-    <!--           <a -->
-    <!--             href="#home" -->
-    <!--             class="block border-b border-text py-2 pr-4 pl-3 text-text hover:bg-accent md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-accent" -->
-    <!--             >Home</a -->
-    <!--           > -->
-    <!--         </li> -->
-    <!--         <li> -->
-    <!--           <a -->
-    <!--             href="#artist" -->
-    <!--             class="block border-b border-text py-2 pr-4 pl-3 text-text hover:bg-accent md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-accent" -->
-    <!--             aria-current="Artist" -->
-    <!--             >Artist</a -->
-    <!--           > -->
-    <!--         </li> -->
-    <!--         <li> -->
-    <!--           <a -->
-    <!--             href="events/" -->
-    <!--             class="block border-b border-text py-2 pr-4 pl-3 text-text hover:bg-accent md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-accent" -->
-    <!--             >Events</a -->
-    <!--           > -->
-    <!--         </li> -->
-    <!--         <li data-wip> -->
-    <!--           <a -->
-    <!--             href="about/" -->
-    <!--             class="block border-b border-text py-2 pr-4 pl-3 text-text hover:bg-accent md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-accent" -->
-    <!--             >About</a -->
-    <!--           > -->
-    <!--         </li> -->
-    <!--         <li> -->
-    <!--           <a -->
-    <!--             href="#gallery" -->
-    <!--             class="block border-b border-text py-2 pr-4 pl-3 text-text hover:bg-accent md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-accent" -->
-    <!--             >Gallery</a -->
-    <!--           > -->
-    <!--         </li> -->
-    <!--         <li> -->
-    <!--           <a -->
-    <!--             href="#contact" -->
-    <!--             class="block py-2 pr-4 pl-3 text-text hover:bg-accent md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-accent" -->
-    <!--             aria-current="Contact" -->
-    <!--             >Contact</a -->
-    <!--           > -->
-    <!--         </li> -->
-    <!--       </ul> -->
-    <!--     </div> -->
-    <!--   </div> -->
-    <!-- </nav> -->
-
     <!-- HOME -->
     <section
       data-home
@@ -341,31 +235,41 @@
     >
       <h1 class="mb-6 text-title font-black">Artists</h1>
 
-      <div
-        class="w-full flex flex-wrap items-center justify-center gap-6 space-y-6"
-      >
+      <div class="flex w-full flex-wrap items-center justify-center gap-12">
         <!-- 19 may -->
         <div class="flex flex-col items-center">
           <span class="mb-6 text-3xl font-bold text-text">19 May</span>
           <div
             class="flex flex-wrap items-center justify-center gap-6 md:justify-between"
           >
-            <div class="max-w-xs flex-shrink-0 rounded-lg shadow-lg border-dark border-2">
-              <img class="block rounded-lg mb-8 p-0 object-cover object-center" src="https://ik.imagekit.io/rain/regalia22/artists/underauthority_P28p5o7_F?ik-sdk-version=javascript-1.4.3" alt="Ehsaas India image" />
+            <div
+              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
+            >
+              <img
+                class="mb-8 block rounded-lg object-cover object-center p-0"
+                src="https://ik.imagekit.io/rain/regalia22/artists/underauthority_P28p5o7_F?ik-sdk-version=javascript-1.4.3"
+                alt="Ehsaas India image"
+              />
               <div class="px-5 pb-5">
-                <h5 class="font-medium text-xl tracking-tight text-text text-center">
+                <h5
+                  class="text-center text-xl font-medium tracking-tight text-text"
+                >
                   Ehsaas India
                 </h5>
               </div>
             </div>
-            <div class="max-w-xs flex-shrink-0 rounded-lg shadow-lg border-dark border-2">
+            <div
+              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
+            >
               <img
-                class="block rounded-lg mb-8 p-0 object-cover object-center"
+                class="mb-8 block rounded-lg object-cover object-center p-0"
                 src="https://ik.imagekit.io/rain/regalia22/artists/somlata_G9cqHnZpb?ik-sdk-version=javascript-1.4.3"
                 alt="Somlata and the Aces image"
               />
               <div class="px-5 pb-5">
-                <h5 class="font-medium text-xl tracking-tight text-text text-center">
+                <h5
+                  class="text-center text-xl font-medium tracking-tight text-text"
+                >
                   Somlata and the Aces
                 </h5>
               </div>
@@ -378,30 +282,40 @@
           <div
             class="flex flex-wrap items-end justify-center gap-6 md:justify-between"
           >
-            <div class="max-w-xs flex-shrink-0 rounded-lg shadow-lg border-dark border-2">
-              <img
-                class="block rounded-lg mb-8 p-0 object-cover object-center"
-                src="https://ik.imagekit.io/rain/regalia22/artists/underauthority_P28p5o7_F?ik-sdk-version=javascript-1.4.3"
-                alt="Tribute to Pancham image"
-              />
+            <div
+              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
+            >
+              <div class="mb-7 rounded-lg bg-[#d27a62] py-10">
+                <img
+                  class="bloc object-cover object-center p-0"
+                  src="https://ik.imagekit.io/rain/regalia22/artists/tribute_6mTLsCcbY.jpg?ik-sdk-version=javascript-1.4.3"
+                  alt="Tribute to Pancham image"
+                />
+              </div>
               <div class="px-5 pb-5">
-                <h5 class="font-medium mb-1 text-xl tracking-tight text-text text-center">
+                <h5
+                  class="mb-1 text-center text-xl font-medium tracking-tight text-text"
+                >
                   Tribute to Pancham
                 </h5>
-                <p class="text-sm text-[#444] text-center">
+                <p class="text-center text-sm text-[#444]">
                   Kishore Sodha, Sachin Jambhekar, <br />
                   Sujoy Bhowmik, Sispiya and team
                 </p>
               </div>
             </div>
-            <div class="max-w-xs flex-shrink-0 rounded-lg shadow-lg border-dark border-2">
+            <div
+              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
+            >
               <img
-                class="block rounded-lg mb-8 p-0 object-cover object-center"
+                class="mb-8 block rounded-lg object-cover object-center p-0"
                 src="https://ik.imagekit.io/rain/regalia22/artists/underauthority_P28p5o7_F?ik-sdk-version=javascript-1.4.3"
                 alt="Underground Authority image"
               />
               <div class="px-5 pb-5">
-                <h5 class="font-medium text-xl tracking-tight text-text text-center">
+                <h5
+                  class="text-center text-xl font-medium tracking-tight text-text"
+                >
                   Underground Authority
                 </h5>
               </div>
