--- a/src/events/index.html
+++ b/src/events/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="events.css" />
+    <link rel="stylesheet" href="./events.css" />
   </head>
   <body>
     <a
@@ -20,8 +20,9 @@
         top: 1rem;
         right: 2rem;
         padding: 0.6rem 1rem;
-        background-color: #0b74bf;
-        color: #f2f2f2;
+        background-color: transparent;
+        color: #0D0D0D;
+        border: 2px solid #0D0D0D;
         border-radius: 999px;
         text-decoration: none;
         z-index: 999999;
