--- a/src/index.html
+++ b/src/index.html
@@ -55,12 +55,13 @@
 
   <style>
     :root {
-      --bg: #0d0d0d;
+      --bg: #000;
       --text: #f2f2f2;
     }
     * {
       -webkit-tap-highlight-color: transparent;
     }
+    
     .preloader-page {
       position: fixed;
       top: 0;
@@ -70,6 +71,7 @@
       z-index: 1100;
       background-color: var(--bg);
       cursor: pointer;
+      display: none;
     }
     .preloader-page .loader__wrapper {
       position: relative;
@@ -87,16 +89,18 @@
       color: var(--text);
       margin: 0;
     }
-    .preloader-page .loader__text > h3 {
-      font-size: calc(70% + 0.5vw);
-      text-transform: uppercase;
-      letter-spacing: 5px;
-      font-weight: 700;
-    }
-    .preloader-page .loader__text > p {
-      font-size: calc(70% + 0.1vw);
-      letter-spacing: 1.2px;
+
+    .preloader-page .loader__text > h1 {
+      font-size: 30px;
+      font-weight: bold;
+      opacity: 0.3;
       text-align: center;
+    }
+
+    .preloader-page .loader__text .logo_name
+    {
+      width: 40vw;
+      opacity: 0.7;
     }
     .preloader-page .loader__circle {
       display: block;
@@ -140,14 +144,245 @@
         transform: translate(-50%, -50%) rotate(-360deg);
       }
     }
+
+    .main-body
+    {
+      display: none;
+      margin: auto;
+    }
+
+    .body-container
+    {
+      position: relative;
+      width: 100%;
+      margin: 0 auto;
+      background-color: green;
+    }
+    .is-visible
+    {
+      margin-top: -200px;
+      transition: all 0.5s ease-in-out;
+    }
+    .splide__slide:not(.is-visible)
+    {
+      margin-top:100px;
+      transition: all 0.5s ease-in-out;
+    }
+
+    .outline-txt {
+      color: #0D0D0D;
+      text-shadow:
+      -1px -1px 0 #fff,
+      1px -1px 0 #fff,
+      -1px 1px 0 #fff,
+      1px 1px 0 #fff;  
+      letter-spacing: 5px;
+      opacity: 0.3;
+      font-size: 80px !important;
+      font-weight: bold !important;
+    }
+
+    .label-description
+    {
+      color: #0b74bf !important;
+      margin-top: -10px !important;
+      font-size: 14px;
+    }
+
+    .splide__arrow
+    {
+      background-color: #fff !important;
+    }
+
+
+.artist-container {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.artist-container::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  right: -4px;
+  bottom: -4px;
+  background: linear-gradient(315deg, #00ccff, #0e1538, #d400d4);
+  transform: skewx(2deg) skewy(2deg);
+}
+.artist-container::after {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  right: -4px;
+  bottom: -4px;
+  background: linear-gradient(315deg, #00ccff, #0e1538, #d400d4);
+  transform: skewx(2deg) skewy(2deg);
+  filter: blur(50px);
+}
+.artist-container span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0e1538;
+  z-index: 10;
+}
+
+.artist-container span  img
+{
+  height: 100% !important;
+}
+.artist-container h2 {
+  position: relative;
+  z-index: 11;
+  font-size: 30px;
+  color: #000;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0));
+  text-align: center;
+  position: absolute;
+  bottom:0px;
+  font-weight: bold !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.artist-list-container
+{
+  width: 100%; 
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  margin-bottom: 80px;
+  margin-top: 20px;
+}
+.event__name
+{
+  width: 50%;
+}
+
+.cta-btn
+{
+  border:1px solid #fff;
+  padding: 10px 20px;
+  border-radius: 30px;
+}
+
+.glow {
+  width: 100%;
+  position: absolute;
+  margin-top: 150px;
+  margin-left: 150px;
+}
+.glow span {
+  color: #ffffff;
+  text-shadow: 0 0 2px #ffffff, 0 0 10px #ffffff, 0 0 20px #0ba9ca, 0 0 30px #0ba9ca, 0 0 40px #0ba9ca, 0 0 50px #0ba9ca;
+  -webkit-animation: blink 1.5s infinite alternate;
+          animation: blink 1.5s infinite alternate;
+}
+.glow .major {
+  display: block;
+  font-size: 30px;
+}
+.glow .minor {
+  display: block;
+  font-size: 20px;
+}
+
+@-webkit-keyframes blink {
+  100% {
+    text-shadow: 0 0 2px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 40px #0ba9ca, 0 0 70px #0ba9ca, 0 0 80px #0ba9ca;
+  }
+}
+
+@keyframes blink {
+  100% {
+    text-shadow: 0 0 2px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 40px #0ba9ca, 0 0 70px #0ba9ca, 0 0 80px #0ba9ca;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .artist-list-container
+  {
+    flex-direction: column;
+  }
+  .outline-txt
+  {
+    font-size: 50px !important;
+  }
+  .is-visible
+    {
+      margin-top: 0px !important;
+    }
+    .splide__slide:not(.is-visible)
+    {
+      margin-top:0px
+    }
+    .event__name
+    {
+      width: 100%;
+    }
+    .glow {
+    position: relative;
+    text-align: center;
+    margin-left: auto;
+    margin-top: 30px;
+    }
+    .follow-us h2
+    {
+        font-size: 20px;
+    }
+    .follow-us .platforms
+    {
+      margin-left: 3px !important;
+    }
+    .follow-us .platforms a
+    {
+      font-size: 14px;
+      font-weight: normal !important;
+    }
+
+    .contacts-item h5
+    {
+      font-size: 14px !important;
+    }
+    .contacts-item a {
+      font-size: 12px !important
+    }
+    .logo__container
+    {
+      display: block !important;
+      position: relative !important;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      width: 50vw;
+      margin: 0px auto;
+      margin-top: 100px;
+    }
+}
   </style>
 
   <body
-    class="relative m-0 overflow-hidden bg-background font-primary text-text"
+    class="container-fluid mx-auto relative m-0 overflow-hidden font-primary text-text bg-background"
   >
+  <div id="main-body" class="main-body">
     <img
       class="absolute z-0 h-screen w-full object-cover object-center"
-      src="images/bg_home.jpg"
+      src="./assets/bg-1.png"
       alt=""
       aria-hidden="true"
     />
@@ -162,25 +397,20 @@
       <div class="z-10 px-6 md:px-12">
         <div class="mt-6 space-y-2 sm:mt-8">
           <p class="font-medium">Presenting the annual cultural fest</p>
-          <h1 class="text-5xl font-bold sm:text-title sm:font-black">
-            Regalia '22
-          </h1>
+          <img src="./assets/nbame.gif" class="event__name"/>
         </div>
 
         <div
           class="mt-6 text-2xl font-bold sm:mt-12 sm:space-y-4 sm:text-sub-title"
         >
-          <h3>Relive.</h3>
-          <h3>Rejoice.</h3>
-          <h3>Rejuvenate.</h3>
         </div>
 
         <!-- links as button -->
         <div class="mt-6 flex items-center space-x-6 text-sm sm:text-base">
           <a
             href="events/"
-            class="rounded-lg bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 px-5 py-2.5 text-center text-sm font-medium text-background hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-red-100"
-            >See events</a
+            class="cta-btn"
+            >Check out Events</a
           >
           <a
             data-wip
@@ -191,7 +421,7 @@
           </a>
         </div>
 
-        <div class="absolute bottom-16 sm:right-12">
+        <div class="absolute bottom-16 sm:right-12 logo__container">
           <div class="h-40 w-40 sm:ml-auto sm:h-48 sm:w-48">
             <img
               class="block h-full w-full"
@@ -207,7 +437,7 @@
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5 sm:h-8 sm:w-8"
-              viewBox="0 0 20 20"
+              view="0 0 20 20"
               fill="currentColor"
             >
               <path
@@ -233,96 +463,69 @@
       id="artist"
       class="mb-12 min-h-screen w-full scroll-mt-20 px-6 md:px-12"
     >
-      <h1 class="mb-6 text-title font-black">Artists</h1>
+      <h1 class="outline-txt">Artists.</h1>
+      <p class="label-description">Let's Relive, Rejoice & Rejuvenate together</p>
 
-      <div class="flex w-full flex-wrap items-center justify-center gap-12">
         <!-- 19 may -->
         <div class="flex flex-col items-center">
-          <span class="mb-6 text-3xl font-bold text-text">19 May</span>
+          <div class="glow">
+            <span class="major">19th </span>
+            <span class="minor">May</span>
+          </div>
+          
           <div
-            class="flex flex-wrap items-center justify-center gap-6 md:justify-between"
+            class="artist-list-container"
           >
-            <div
-              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
-            >
+          <div class="artist-container">
+            <span>
               <img
                 class="mb-8 block rounded-lg object-cover object-center p-0"
-                src="https://ik.imagekit.io/rain/regalia22/artists/underauthority_P28p5o7_F?ik-sdk-version=javascript-1.4.3"
+                src="./assets/artist-1.jpeg"
                 alt="Ehsaas India image"
               />
-              <div class="px-5 pb-5">
-                <h5
-                  class="text-center text-xl font-medium tracking-tight text-text"
-                >
-                  Ehsaas India
-                </h5>
-              </div>
-            </div>
-            <div
-              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
-            >
+            </span>
+          </div>
+          <div class="artist-container">
+            <span>
               <img
                 class="mb-8 block rounded-lg object-cover object-center p-0"
-                src="https://ik.imagekit.io/rain/regalia22/artists/somlata_G9cqHnZpb?ik-sdk-version=javascript-1.4.3"
-                alt="Somlata and the Aces image"
+                src="./assets/artist-2.jpeg"
+                alt="Ehsaas India image"
               />
-              <div class="px-5 pb-5">
-                <h5
-                  class="text-center text-xl font-medium tracking-tight text-text"
-                >
-                  Somlata and the Aces
-                </h5>
-              </div>
-            </div>
+            </span>
+          </div>
           </div>
         </div>
         <!-- 20 may -->
         <div class="flex flex-col items-center">
-          <span class="mb-6 text-3xl font-bold text-text">20 May</span>
+          <div class="glow">
+            <span class="major">20th </span>
+            <span class="minor">May</span>
+          </div>
           <div
-            class="flex flex-wrap items-end justify-center gap-6 md:justify-between"
+            class="artist-list-container"
           >
-            <div
-              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
-            >
-              <div class="mb-7 rounded-lg bg-[#d27a62] py-10">
-                <img
-                  class="bloc object-cover object-center p-0"
-                  src="https://ik.imagekit.io/rain/regalia22/artists/tribute_6mTLsCcbY.jpg?ik-sdk-version=javascript-1.4.3"
-                  alt="Tribute to Pancham image"
-                />
-              </div>
-              <div class="px-5 pb-5">
-                <h5
-                  class="mb-1 text-center text-xl font-medium tracking-tight text-text"
-                >
-                  Tribute to Pancham
-                </h5>
-                <p class="text-center text-sm text-[#444]">
-                  Kishore Sodha, Sachin Jambhekar, <br />
-                  Sujoy Bhowmik, Sispiya and team
-                </p>
-              </div>
-            </div>
-            <div
-              class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
-            >
+          <div class="artist-container">
+            <span>
               <img
                 class="mb-8 block rounded-lg object-cover object-center p-0"
-                src="https://ik.imagekit.io/rain/regalia22/artists/underauthority_P28p5o7_F?ik-sdk-version=javascript-1.4.3"
-                alt="Underground Authority image"
+                src="./assets/artist-1.jpeg"
+                alt="Ehsaas India image"
               />
-              <div class="px-5 pb-5">
-                <h5
-                  class="text-center text-xl font-medium tracking-tight text-text"
-                >
-                  Underground Authority
-                </h5>
-              </div>
-            </div>
+            </span>
+          </div>
+          <div class="artist-container">
+            <span>
+              <img
+                class="mb-8 block rounded-lg object-cover object-center p-0"
+                src="./assets/artist-1.jpeg"
+                alt="Ehsaas India image"
+              />
+            </span>
+          </div>
           </div>
         </div>
-      </div>
+
     </section>
 
     <!-- GALLERY -->
@@ -331,13 +534,13 @@
       id="gallery"
       class="mb-12 w-full scroll-mt-20 space-y-6 px-6 md:px-12"
     >
-      <h1 class="text-5xl font-black md:text-title">Gallery</h1>
-      <p class="mt-6 text-accent">See some of the best photos of Regalia</p>
+      <h1 class="outline-txt">Gallery.</h1>
+      <p class="label-description">See some of the best photos of Regalia</p>
       <!-- carousel container -->
       <div class="splide">
         <div
           style="scrollbar-width: none"
-          class="splide__track h-[calc(100vh/10rem) sm:h-[calc(100vh-15rem)]"
+          class="splide__track"
         >
           <ul data-carousel class="splide__list w-full will-change-transform">
             <li class="splide__slide" data-splide-interval="2000">
@@ -472,7 +675,7 @@
       id="contact"
       class="contact w-full scroll-mt-20 px-6 md:px-8"
     >
-      <h1 class="contact-head">Contact</h1>
+      <h1 class="outline-txt text-center mb-4">Contact.</h1>
       <div class="contact-middle-section">
         <div class="google-maps">
           <iframe
@@ -562,14 +765,15 @@
         </li>
       </ul>
     </footer>
-
+  </div>
     <!-- PRELOADER -->
-    <div class="preloader-page">
+    <div class="preloader-page" >
       <div class="loader__wrapper">
         <div class="preloader-page__loader">
           <div class="loader__text">
-            <h3>Regalia 2022</h3>
-            <p>Click to start</p>
+            <h1>RCCIIT Presents</h1>
+            <img src="./assets/loading-low.gif"/>
+            <img src="./assets/name.png" class="logo_name"/>
           </div>
           <span class="loader__circle"></span>
           <span class="loader__circle"></span>
@@ -581,7 +785,7 @@
           width="100%"
           height="100vh"
           preserveAspectRatio="none"
-          viewBox="0 0 1440 800"
+          viewbox="0 0 1440 800"
         >
           <path
             d="M -44,-50 C -52.71,28.52 15.86,8.186 184,14.69 383.3,22.39 462.5,12.58 638,14 835.5,15.6 987,6.4 1194,13.86 1661,30.68 1652,-36.74 1582,-140.1 1512,-243.5 15.88,-589.5 -44,-50 Z"
@@ -626,7 +830,7 @@
     <!--           <svg -->
     <!--             class="h-6 w-6" -->
     <!--             fill="currentColor" -->
-    <!--             viewBox="0 0 20 20" -->
+    <!--             viewartist-container="0 0 20 20" -->
     <!--             xmlns="http://www.w3.org/2000/svg" -->
     <!--           > -->
     <!--             <path -->
@@ -638,7 +842,7 @@
     <!--           <svg -->
     <!--             class="hidden h-6 w-6" -->
     <!--             fill="currentColor" -->
-    <!--             viewBox="0 0 20 20" -->
+    <!--             viewartist-container="0 0 20 20" -->
     <!--             xmlns="http://www.w3.org/2000/svg" -->
     <!--           > -->
     <!--             <path -->
@@ -706,5 +910,7 @@
 
     <!-- (do not edit below) -->
     <script type="module" src="/main.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
   </body>
 </html>
