--- a/src/index.html
+++ b/src/index.html
@@ -95,13 +95,23 @@
       font-weight: bold;
       opacity: 0.3;
       text-align: center;
+      margin-top: 100px;
     }
 
     .preloader-page .loader__text .logo_name
     {
       width: 40vw;
       opacity: 0.7;
+      margin-top: -100px;
     }
+
+    .preloader-page .loader__text .logo
+    {
+      width: 40vw;
+      opacity: 0.7;
+      
+    }
+
     .preloader-page .loader__circle {
       display: block;
       position: absolute;
@@ -372,6 +382,22 @@
       width: 50vw;
       margin: 0px auto;
       margin-top: 100px;
+    }
+    .loader__text h1{
+      font-size: 10px !important;
+    }
+    .preloader-page .loader__text .logo{
+      width: 100% !important;
+    }
+    .preloader-page .loader__text .logo_name
+    {
+      width: 80vw !important;
+      margin: 0px auto;
+      margin-top: -50px;
+    }
+    .preloader-page .loader__text
+    {
+      width: 100%;
     }
 }
   </style>
@@ -772,8 +798,8 @@
         <div class="preloader-page__loader">
           <div class="loader__text">
             <h1>RCCIIT Presents</h1>
-            <img src="./assets/loading-low.gif"/>
-            <img src="./assets/name.png" class="logo_name"/>
+            <img src="./assets/loading-low.gif" class="logo"/>
+            <img src="./assets/nbame.gif" class="logo_name"/>
           </div>
           <span class="loader__circle"></span>
           <span class="loader__circle"></span>
