mobile responsive fixes:

--- a/src/events/index.html
+++ b/src/events/index.html
@@ -23,7 +23,7 @@
             "Music is the literature of the heart, it commences where speech
             ends" - Alphonse de Lamartine
           </p>
-          <button data-modal-target="#modal1">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal1">Learn more</button>
         </div>
       </div>
 
@@ -43,7 +43,7 @@
             today, when human contacts are so quick. Fashion is instant
             language." - Miuccia Prada
           </p>
-          <button data-modal-target="#modal2">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal2">Learn more</button>
         </div>
       </div>
       <div class="card">
@@ -62,7 +62,7 @@
             nature penetrate your skin, Spin with the world as Magic sinks in!"
             -Christy Ann Martine
           </p>
-          <button data-modal-target="#modal3">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal3">Learn more</button>
         </div>
       </div>
       <div class="card">
@@ -80,7 +80,7 @@
             "A positive attitude opens the door to positive opportunities, which
             leads to a positive life." - Joel Benjamin
           </p>
-          <button data-modal-target="#modal4">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal4">Learn more</button>
         </div>
       </div>
       <div class="card">
@@ -96,7 +96,7 @@
           <p class="bio">
             "Photography has nothing to do with the camera" - Lucas Gentry
           </p>
-          <button data-modal-target="#modal5">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal5">Learn more</button>
         </div>
       </div>
       <div class="card">
@@ -113,7 +113,7 @@
             They say, if a picture is worth a thousand words, then a video is
             worth a million.
           </p>
-          <button data-modal-target="#modal6">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal6">Learn more</button>
         </div>
       </div>
       <div class="card">
@@ -131,7 +131,7 @@
             Here's to belonging to a generation that copes with the miseries of
             life, through memes.
           </p>
-          <button data-modal-target="#modal7">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal7">Learn more</button>
         </div>
       </div>
       <div class="card">
@@ -148,7 +148,7 @@
           <p class="bio">
             "Advertising is the art of persuasion" - William Bernbach
           </p>
-          <button data-modal-target="#modal8">Learn more</button>
+          <button class="modal-btn" data-modal-target="#modal8">Learn more</button>
         </div>
       </div>
     </div>
@@ -372,7 +372,7 @@
     <div class="modal" id="modal4">
       <div class="modal-header">
         <div class="title">Rules & Regulations: <b>CARPE-DIEM</b></div>
-        <button data-close-button class="close-button">&times;</button>
+        <button  data-close-button class="close-button">&times;</button>
       </div>
       <div class="modal-body">
         Team REGALIA 2022 happily presents CARPE DIEM - 3 Minutes to Fame, this
@@ -447,7 +447,7 @@
     <div class="modal" id="modal5">
       <div class="modal-header">
         <div class="title">Rules & Regulations: <b>LOOKING GLASS</b></div>
-        <button data-close-button class="close-button">&times;</button>
+        <button  data-close-button class="close-button">&times;</button>
       </div>
       <div class="modal-body">
         Team REGALIA 2022, believe it is the photographer who creates a story
