--- a/src/index.html
+++ b/src/index.html
@@ -283,7 +283,7 @@
 
         <div
           data-text
-          class="mt-6 overflow-hidden text-min-lg font-bold md:text-max-lg"
+          class="mt-4 overflow-hidden text-min-lg font-bold md:text-max-lg"
         >
           <h3>Relive.</h3>
           <h3>Rejoice.</h3>
@@ -415,13 +415,11 @@
             <div
               class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
             >
-              <div class="mb-7 rounded-lg bg-[#694796] bg-transparent py-7">
-                <img
-                  class="block object-cover object-center p-0"
-                  src="https://ik.imagekit.io/rain/regalia22/artists/TTP_fNdvCVdy8.png?ik-sdk-version=javascript-1.4.3"
-                  alt="Tribute to Pancham image"
-                />
-              </div>
+              <img
+                class="mb-8 block rounded-lg object-cover object-center p-0"
+                src="./images/ttp.jpg"
+                alt="Tribute to Pancham image"
+              />
               <div class="px-5 pb-5">
                 <h5
                   class="mb-1 text-center text-min-base font-medium tracking-tight text-text md:text-max-base"
