--- a/src/index.html
+++ b/src/index.html
@@ -469,10 +469,7 @@
           style="scrollbar-width: none"
           class="splide__track h-[calc(100vh/10rem) sm:h-[calc(100vh-15rem)]"
         >
-          <ul
-            data-carousel
-            class="splide__list w-full will-change-transform"
-          >
+          <ul data-carousel class="splide__list w-full will-change-transform">
             <li class="splide__slide" data-splide-interval="2000">
               <img
                 data-splide-lazy="https://ik.imagekit.io/rain/regalia22/carousel/1_DDMYIpaSq.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1652622984977"
