--- a/src/events/index.html
+++ b/src/events/index.html
@@ -83,74 +83,42 @@
           style="width: 100%"
         />
       </div>
-      <div class="card">
+      <div class="card" data-modal-target="#modal9">
         <img
           class="card-image"
-          src="images/face painting.webp"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/3-min_WkrJA1pY8.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523901937"
           alt="Face Painting"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Face on Face off.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "A brush of kindness can paint a smile on a face" - Robert M. Hensel
-          </p>
-          <button data-modal-target="#modal9">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card" data-modal-target="#modal10">
         <img
           class="card-image"
-          src="images/painting.webp"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/12-min_GHBA0p3x8.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523904375"
           alt="Hand Painting"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Rush to Brush.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            “A man paints with his brains and not with his hands” - Michelangelo
-          </p>
-          <button data-modal-target="#modal10">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card" data-modal-target="#modal11">
         <img
           class="card-image"
-          src="images/sketching.webp"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/2-min_qj5a4pWOP.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523901960"
           alt="Sketching"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Stroke by Stroke.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "All the visible world is only light on form." - Andrew Loomis
-          </p>
-          <button data-modal-target="#modal11">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card" data-modal-target="#modal12">
         <img
           class="card-image"
-          src="images/unconventionalpainting.webp"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/1-min_n7pQHnbh9.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523905067"
           alt="Unconventional Painting"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Royale Rouge.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "There is no abstract art, you must always start with something.
-            Afterwards you can remove all traces of reality." - Pablo Picasso
-          </p>
-          <button data-modal-target="#modal12">Learn more</button>
-        </div>
+        
       </div>
     </div>
 
@@ -856,7 +824,7 @@
     <div id="overlay"></div>
 
     <script type="module" src="./modals.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="../main.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </body>
 </html>
